add go docs for Update and Delete User in MyGram.
