# MyGram/controllers/userController.go
@@ -14,12 +14,12 @@ import (
 )
 
 // RegisterUser godoc
-// @Summary      Register a user
-// @Description  Register a user.
+// @Summary      Register a new user
+// @Description  Register a new user.
 // @Tags         users
 // @Accept       json
 // @Produce      json
-// @Param        order body dto.UserRegister true "JSON of the user to be made."
+// @Param        user body dto.UserRegister true "JSON of the user to be made. Minimum age is 9. Minimum password length is 6"
 // @Success      201  {object}  responses.UserRegister
 // @Failure      400  {object}  responses.ErrorMessage
 // @Failure      500  {object}  nil
@@ -62,7 +62,7 @@ func RegisterUser(ctx *gin.Context) {
 // @Tags         users
 // @Accept       json
 // @Produce      json
-// @Param        order body dto.UserLogin true "JSON of the user to login."
+// @Param        user body dto.UserLogin true "JSON of the user to login. Minimum password length is 6."
 // @Success      201  {object}  responses.UserLogin
 // @Failure      400  {object}  responses.ErrorMessage
 // @Failure      500  {object}  nil
@@ -93,6 +93,18 @@ func LoginUser(ctx *gin.Context) {
 	})
 }
 
+// UpdateUser godoc
+// @Summary      Update logged in user
+// @Description  update logged in user identified by their bearer token.
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        user body dto.UserUpdate true "New email and new username of the logged in user. Leave one of it empty if you want it to stay the same."
+// @Success      200  {object}  responses.UserUpdate
+// @Failure      400  {object}  responses.ErrorMessage
+// @Failure      500  {object}  nil
+// @Router       /users [put]
+// @Security	 BearerAuth
 func UpdateUser(ctx *gin.Context) {
 	var userDto dto.UserUpdate
 	if err := ctx.ShouldBindJSON(&userDto); err != nil {
@@ -113,8 +125,8 @@ func UpdateUser(ctx *gin.Context) {
 		var perr *pgconn.PgError
 		if ok := errors.As(err, &perr); ok {
 			if perr.Code == uniqueViolationErr {
-				ctx.AbortWithStatusJSON(http.StatusOK, gin.H{
-					messageStr: "The email or username is already registered.",
+				ctx.AbortWithStatusJSON(http.StatusOK, responses.Message{
+					Message: "The email or username is already registered.",
 				})
 				return
 			}
@@ -131,6 +143,17 @@ func UpdateUser(ctx *gin.Context) {
 	})
 }
 
+// DeleteOrder godoc
+// @Summary      Delete logged in user
+// @Description  Delete logged in user identified by their bearer token.
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  responses.Message
+// @Failure      400  {object}  responses.ErrorMessage
+// @Failure      500  {object}  nil
+// @Router       /users [delete]
+// @Security	 BearerAuth
 func DeleteUser(ctx *gin.Context) {
 	userID, err := token.ExtractTokenID(ctx)
 	if err != nil {
