# MyGram/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "API server for MyGram social media in \"Scalable Webservice with Golang\" course from Hacktiv8 × Kominfo.",
-        "title": "Order API",
+        "title": "MyGram API",
         "contact": {
             "name": "Muhammad Evan Anindya Wahyuaji",
             "email": "m.evan.aw@google.com"
@@ -16,6 +16,89 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/users": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "update logged in user identified by their bearer token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update logged in user",
+                "parameters": [
+                    {
+                        "description": "New email and new username of the logged in user. Leave one of it empty if you want it to stay the same.",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserUpdate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.UserUpdate"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete logged in user identified by their bearer token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Delete logged in user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Message"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/users/login": {
             "post": {
                 "description": "Login a user.",
@@ -31,8 +114,8 @@
                 "summary": "Login a user",
                 "parameters": [
                     {
-                        "description": "JSON of the user to login.",
-                        "name": "order",
+                        "description": "JSON of the user to login. Minimum password length is 6.",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -61,7 +144,7 @@
         },
         "/users/register": {
             "post": {
-                "description": "Register a user.",
+                "description": "Register a new user.",
                 "consumes": [
                     "application/json"
                 ],
@@ -71,11 +154,11 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Register a user",
+                "summary": "Register a new user",
                 "parameters": [
                     {
-                        "description": "JSON of the user to be made.",
-                        "name": "order",
+                        "description": "JSON of the user to be made. Minimum age is 9. Minimum password length is 6",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -112,7 +195,8 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "name@org.dom.ge"
                 },
                 "password": {
                     "type": "string",
@@ -130,14 +214,32 @@
             ],
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 23
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "name@org.dom.ge"
                 },
                 "password": {
                     "type": "string",
                     "minLength": 6
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UserUpdate": {
+            "type": "object",
+            "required": [
+                "email",
+                "username"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "name@org.dom.ge"
                 },
                 "username": {
                     "type": "string"
@@ -152,11 +254,20 @@
                 }
             }
         },
+        "responses.Message": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "responses.UserLogin": {
             "type": "object",
             "properties": {
                 "token": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "header.payload.signature"
                 }
             }
         },
@@ -164,10 +275,12 @@
             "type": "object",
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 23
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "name@org.dom.ge"
                 },
                 "id": {
                     "type": "integer"
@@ -176,6 +289,37 @@
                     "type": "string"
                 }
             }
+        },
+        "responses.UserUpdate": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "example": 23
+                },
+                "email": {
+                    "type": "string",
+                    "example": "name@org.dom.ge"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2019-11-09T21:21:46+00:00"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
